crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_error_class_auth_401.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 633
expression: "ErrorClass::from_status_code(401)"
---
Auth
