crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_error_class_client_400.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 681
expression: "ErrorClass::from_status_code(400)"
---
ClientError
