crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_error_class_rate_limit_429.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 645
expression: "ErrorClass::from_status_code(429)"
---
RateLimit
