crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_error_class_server_500.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 651
expression: "ErrorClass::from_status_code(500)"
---
ServerError
