crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_error_class_server_503.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 663
expression: "ErrorClass::from_status_code(503)"
---
ServerError
