crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_error_class_success_200.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 687
expression: "ErrorClass::from_status_code(200)"
---
~
