crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_error_class_timeout_408.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 675
expression: "ErrorClass::from_status_code(408)"
---
Timeout
